# rucio_register

./: .gitignore  .pre-commit-config.yaml  README.md  SConstruct  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build.yaml
bin.src/: rucio-integration-register  rucio-register
docker/: docker-compose.yml  versions.env
docker/test-register/: Dockerfile  setup.sh
examples/: register_config.yaml  run.sh  run2.sh  run_10.sh  run_dim.sh  run_zip.sh
python/lsst/dm/rucio/register/: app_parser.py  dataset_map.py  resource_bundle.py  rucio_did.py  rucio_interface.py  script.py
python/lsst/rucio/register/: app_parser.py  data_type.py  dataset_map.py  export.py  resource_bundle.py  rubin_meta.py  rucio_did.py  rucio_interface.py  rucio_register_config.py  script.py
tests/: test_app_parser.py  test_dataset_map.py  test_interface.py  test_resource_bundle.py  test_rucio_config.py
tests/data/: config1.yaml  dataset_ref.json  dim_exposure.yaml  dim_visit.yaml  map.yaml  visitSummary_HSC_y_HSC-Y_318_HSC_runs_RC2_w_2023_32_DM-40356_20230814T170253Z.fits
ups/: rucio_register.cfg  rucio_register.table
